--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ body {
   background-color: $yellow-color;
   font-family: 'Lato', sans-serif;
   color: $gray-color;
-  font-size: 16pt;
+  font-size: 14pt;
 }
 
 a {
@@ -76,7 +76,12 @@ header.header {
     }
 
     p {
-      font-size: 0.8em;
+      font-size: 1em;
+      line-height: 180%;
+    }
+
+    ul {
+      font-size: 1em;
       line-height: 180%;
     }
 
@@ -108,6 +113,7 @@ header.header {
 
   .username {
     color: $red-color;
+    font-size: 14pt;
   }
 
   .title {
