--- a/css/main.scss
+++ b/css/main.scss
@@ -200,3 +200,37 @@ header.header {
   }
 }
 
+.posts {
+  width: 1024px;
+  margin: 0 auto;
+
+  .post-title {
+    font-size: 16pt;
+  }
+}
+
+.post-detail {
+  width: 1024px;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding-bottom: 30px;
+
+  .post-header {
+    margin-bottom: 30px;
+  }
+
+  .post-meta {
+    font-size: 16px;
+  }
+
+  .post-title {
+    font-size: 24pt;
+    margin: 0;
+    margin-bottom: 15px;
+    color: $red-color;
+  }
+
+  .post-content {
+    line-height: 150%;
+  }
+}
