--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header-content">
     <div class="brand">
-      <a href="{{ '/' | prepend: site.baseurl }}">hqc.me</a>
+      <a href="{{ '/' | prepend: site.baseurl }}">hqc.io</a>
     </div>
   </div>
 </header>
