Add Factory Girl with Hanami blog post

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 ---
 @charset "utf-8";
 @import "bourbon/bourbon";
+@import "syntax-highlighting";
 
 $yellow-color: #fdf6e3;
 $gray-color: #505050;
