--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -11,6 +11,7 @@
   margin: 0;
   padding: 15px 30px;
   font-size: 14px;
+  overflow-x: auto;
 }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
