--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ body {
   margin: 0 auto;
   padding: 0;
   background-color: $yellow-color;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: $gray-color;
   font-size: 14pt;
 }
