--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,9 @@
       <a href="{{ "/essays" | prepend: site.baseurl }}">Posts</a>
     </li>
     <li>
+      <a href="{{ '/friends' | prepend: site.baseurl }}">Friends</a>
+    </li>
+    <li>
       <a href="{{ '/rbcv' | prepend: site.baseurl }}">Resume</a>
     </li>
   </ul>
