--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,7 @@
 <footer>
   <ul class="pages">
     <li>
-      <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
-    </li>
-    <li>
       <a href="{{ '/about' | prepend: site.baseurl }}">About</a>
-    </li>
-    <li>
-      <a href="https://github.com/qcam?tab=repositories">Projects</a>
     </li>
     <li>
       <a href="{{ "/essays" | prepend: site.baseurl }}">Posts</a>
@@ -17,6 +11,9 @@
     </li>
     <li>
       <a href="{{ '/rbcv' | prepend: site.baseurl }}">Resume</a>
+    </li>
+    <li>
+      <a href="{{ '//feedback.hqc.io/feedbacks/new' | prepend: site.baseurl }}">Feedback</a>
     </li>
   </ul>
 </footer>
